# edu-math

./: LICENSE  README.md  pyproject.toml
src/edu_math/: matrix.py
tests/: test_matrix.py
